// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Domain /> <TestDomain /> should render correctly with ACTIVE status 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <form
    class="sc-bcXGCL hoKWeu"
    id="custom-domain-form"
  >
    <h4
      class="sc-bcXGCL kffmQt cap-heading"
    >
      domain.name
    </h4>
    <div
      class="sc-bcXGCL iVJsrM"
    >
      <div
        class="sc-bcXGCL bYxiyO"
      >
        <div
          class="sc-bcXGCL fTyUUX"
        >
          <p
            class="sc-bcXGCL jpifeG cap-text"
          >
            capco.subdomain
          </p>
          <p
            class="sc-bcXGCL kxBQAH cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        class="sc-bcXGCL iNCvnU cap-form-control"
      >
        <label
          class="sc-bcXGCL jfvNeV cap-form-label"
          for="subDomain"
          style="margin-left: 0px; margin-top: 0px;"
        >
          <span
            class="sc-bcXGCL dQChsN cap-text"
            style="margin-left: 0px; margin-top: 0px;"
          >
            sub-domain
          </span>
        </label>
        <input
          aria-required="true"
          class="sc-bcXGCL sc-fXqqsB egzrup hJcGTY cap-input"
          disabled=""
          id="subDomain"
          name="subDomain"
          placeholder="admiun.project.create.title.placeholder"
          required=""
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      class="sc-bcXGCL lcYpuI"
    >
      <div
        class="sc-bcXGCL bYxiyO"
      >
        <div
          class="sc-bcXGCL fTyUUX"
        >
          <p
            class="sc-bcXGCL jpifeG cap-text"
          >
            custom-domain
          </p>
          <p
            class="sc-bcXGCL kxBQAH cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        class="sc-bcXGCL bYxiyO"
      >
        <div
          class="sc-bcXGCL iNCvnU cap-form-control"
        >
          <label
            class="sc-bcXGCL jfvNeV cap-form-label"
            for="customDomain"
            style="margin-left: 0px; margin-top: 0px;"
          >
            <span
              class="sc-bcXGCL dQChsN cap-text"
              style="margin-left: 0px; margin-top: 0px;"
            >
              custom-domain-name
            </span>
          </label>
          <span
            class="sc-bcXGCL ifYgMR cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              class="sc-bcXGCL kxBQAH cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            class="sc-bcXGCL dWgVIC cap-input-group"
          >
            <div
              class="sc-bcXGCL bIFsXi"
            >
              <div
                aria-label="Tag custom.domain.com"
                class="sc-bcXGCL bAGBdP cap-tag"
                title="custom.domain.com"
              >
                <span
                  class="sc-bcXGCL cCwupq cap-tag__label"
                >
                  custom.domain.com
                </span>
                <button
                  aria-label="Remove custom.domain.com"
                  class="sc-bcXGCL sc-gGvGpy hrfuWy hOLoFx cap-button cap-tag__closeButton"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua drcQcK fOGDXF cap-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 12"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 11 11 1M1 1l10 10"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="0.8"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal="true"
      data-dialog="true"
      hidden=""
      id="id-g"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    />
  </form>
</DocumentFragment>
`;

exports[`<Domain /> <TestDomain /> should render correctly with IDLE status 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <form
    class="sc-bcXGCL hoKWeu"
    id="custom-domain-form"
  >
    <h4
      class="sc-bcXGCL kffmQt cap-heading"
    >
      domain.name
    </h4>
    <div
      class="sc-bcXGCL iVJsrM"
    >
      <div
        class="sc-bcXGCL bYxiyO"
      >
        <div
          class="sc-bcXGCL fTyUUX"
        >
          <p
            class="sc-bcXGCL jpifeG cap-text"
          >
            capco.subdomain
          </p>
          <p
            class="sc-bcXGCL kxBQAH cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        class="sc-bcXGCL iNCvnU cap-form-control"
      >
        <label
          class="sc-bcXGCL jfvNeV cap-form-label"
          for="subDomain"
          style="margin-left: 0px; margin-top: 0px;"
        >
          <span
            class="sc-bcXGCL dQChsN cap-text"
            style="margin-left: 0px; margin-top: 0px;"
          >
            sub-domain
          </span>
        </label>
        <input
          aria-required="true"
          class="sc-bcXGCL sc-fXqqsB egzrup hJcGTY cap-input"
          disabled=""
          id="subDomain"
          name="subDomain"
          placeholder="admiun.project.create.title.placeholder"
          required=""
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      class="sc-bcXGCL lcYpuI"
    >
      <div
        class="sc-bcXGCL bYxiyO"
      >
        <div
          class="sc-bcXGCL fTyUUX"
        >
          <p
            class="sc-bcXGCL jpifeG cap-text"
          >
            custom-domain
          </p>
          <p
            class="sc-bcXGCL kxBQAH cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        class="sc-bcXGCL bYxiyO"
      >
        <div
          class="sc-bcXGCL iNCvnU cap-form-control"
        >
          <label
            class="sc-bcXGCL jfvNeV cap-form-label"
            for="customDomain"
            style="margin-left: 0px; margin-top: 0px;"
          >
            <span
              class="sc-bcXGCL dQChsN cap-text"
              style="margin-left: 0px; margin-top: 0px;"
            >
              custom-domain-name
            </span>
          </label>
          <span
            class="sc-bcXGCL ifYgMR cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              class="sc-bcXGCL kxBQAH cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            class="sc-bcXGCL dWgVIC cap-input-group"
          >
            <input
              class="sc-bcXGCL sc-fXqqsB egzrup hJcGTY cap-input"
              id="customDomain"
              name="customDomain"
              placeholder="custom-domain-placeholder"
              type="text"
            />
            <button
              class="sc-bcXGCL sc-gGvGpy hSrtJu jrAhSN cap-button"
              disabled=""
              type="submit"
            >
              global.use
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal="true"
      data-dialog="true"
      hidden=""
      id="id-g"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    />
  </form>
</DocumentFragment>
`;
